# IoT-Web-App

./: README.md  generate_test_dataset.py  pyproject.toml  test_dataset.csv
IoT-SMWS/smwsB/: smwsB.ino
IoT-SMWS/swmsA/: smwsA.ino
app/main/: routes.py
app/main/data/: sensor_data.json
app/static/: app.js  main.css
app/templates/: about.html  chart.html  contact.html  home.html  layout.html
app/templates/errors/: 403.html  404.html
